kubernetes/apps/aincrad/myaac/deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website
  namespace: apps
  labels:
    app: website
spec:
  replicas: 1
  selector:
    matchLabels:
      app: website
  template:
    metadata:
      labels:
        app: website
    spec:
      containers:
      - name: website
        image: ghcr.io/tibia-oce/website:v0.0.1
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
          requests:
            memory: "256Mi"
            cpu: "250m"
