kubernetes/apps/aincrad/myaac/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: website
  namespace: apps
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: website
